# phlex-design

./: .gitignore  .rstcheck.cfg  AGENTS.md  Dockerfile  GNUmakefile  README.md  _quarto.yml  algorithms.html  chunkable.md  conceptual_design.html  data_flow.html  data_organization.html  definitions.html  deployment.html  design_agreements.md  driver.html  dune-fw-design-concerns-chg.md  dune-fw-design-ideas-chg.md  dune-req-009-issues.md  environment.yml  external-contributions-policy.md  framework-agnostic-algorithms-concerns.md  function_notation.html  functional_programming.html  genindex.html  hof_operators.html  index.html  introduction.html  objects.inv  outputs.html  persistent-references-and-associations.md  phlex-art-comparison-plan.json  phlex-art-comparison-prompt.md  platforms.html  preliminaries.html  providers.html  registration-interface.md  registration-interface.qmd  registration.html  requirements-lifecycle.md  (+15 more)
.github/workflows/: add-issues.yaml  build-design-doc.yaml
appendices/: definitions.html  deployment.html  glossary.html  platforms.html  requirements.html
ch_conceptual_design/: algorithms.html  data_organization.html  driver.html  hof_operators.html  preservers.html  program_configuration.html  providers.html  registration.html  resources.html  scheduling.html  supported_hofs.html  translators.html  user_configuration.html  writers.html
ch_conceptual_design/hofs/: composite_chofs.html  filters.html  observers.html  partitioned_folds.html  partitioned_unfolds.html  predicates.html  transforms.html  windows.html
ch_preliminaries/: data_flow.html  function_notation.html  functional_programming.html  sequences.html  types.html
ch_subsystem_design/: algo_description.html  application.html  configuration.html  data_modeling.html  data_product_management.html  error_handler.html  framework_subsystems.html  io.html  logging.html  metadata_management.html  monitoring.html  plugin_management.html  program_startup.html  random_numbers.html  registration.html  resource_management.html  role_of_data_product_concepts.html  signal_handler.html  task_management.html
ch_technical_design/: algo_description.html  application.html  configuration.html  data_modeling.html  data_product_management.html  error_handler.html  framework_subsystems.html  io.html  logging.html  metadata_management.html  monitoring.html  plugin_management.html  program_startup.html  random_numbers.html  registration.html  resource_management.html  role_of_data_product_concepts.html  signal_handler.html  task_management.html
design_wiki/: design-ideas-wiki.md
design_wiki/saplings/: Index.md
design_wiki/seeds/: Index.md  form-io-interface.md  how-data-products-are-labeled.md  how-data-products-are-resolved.md  registries.md  scenarios.md  the-nature-of-concrete-data-product-types.md  the-nature-of-data-product-concepts.md  the-nature-of-implicit-providers.md  the-nature-of-translator-functions.md  the-nature-of-translator-nodes.md
diagrams/: sr_truthbranch.mmd  standard_record.mmd
doc/: DUNE-framework-baseline-1.rst  Makefile  algorithms.rst  conceptual_design.rst  conf.py  data_flow.rst  data_organization.rst  definitions.rst  deployment.rst  framework-scope.gv  function_notation.rst  functional_programming.rst  graph_processing.rst  hof_operators.rst  index.rst  introduction.rst  languages.rst  platforms.rst  preliminaries.rst  programming_paradigm.rst  registration.rst  requirements.rst  resources.rst  scheduling.rst  sequence_spec.rst  sequences.rst  sources_sinks.rst  subsystems.gv  subsystems.rst  supporting_design.rst  technical_design.rst  user_api.rst  user_configuration.rst  work-flow.gv  writers.rst
doc/_extensions/: appendix.py  autoindex_term.py  missing_references.py  requirement.py  terminology.py
doc/_static/: phlexframework.css
doc/appendices/: definitions.rst  glossary.rst  platforms.rst  requirements.rst
doc/ch_conceptual_design/: algorithms.rst  data-organization.gv  data-products.gv  data_organization.rst  driver.rst  hof_operators.rst  preservers.rst  program_configuration.rst  providers.rst  registration.rst  resources.rst  scheduling.rst  supported_hofs.rst  translators.rst  user_configuration.rst  writers.rst
doc/ch_preliminaries/: data_flow.rst  function_notation.rst  functional-programming-data-flow.gv  functional_programming.rst  sequences.rst  types.rst  unfold-transform-fold-hof.gv  unfold-transform-fold.gv
doc/ch_technical_design/: io.rst  (+8 more)
f1_config_demonstration/: CMakeLists.txt  CMakePresets.json  FHiCL.fcl  JSON.json  README.md  YAML.yaml  fhicl_t.cc  json_t.cc  make_parameter_set_from_YAML.cc  make_parameter_set_from_YAML.h  make_parameter_set_from_YAML_string.cc  make_parameter_set_from_YAML_string.h  yaml_t.cc
graph-construction-cpp/: CMakeLists.txt  Graph.cpp  Graph.h  calculate.cpp  calculate.h  chat_gpt_1.cpp  definitions.cpp  definitions.h  dual_spill_fanout_test.cpp  identifier.cpp  identifier.hpp  layer_path_t.cpp  layer_path_t.h  main.cpp  test.cpp
product-queries/: framework.py  sample.py
sources/: algorithms.rst.txt  conceptual_design.rst.txt  data_flow.rst.txt  data_organization.rst.txt  function_notation.rst.txt  functional_programming.rst.txt  hof_operators.rst.txt  index.rst.txt  introduction.rst.txt  outputs.rst.txt  platforms.rst.txt  preliminaries.rst.txt  registration.rst.txt  requirements.rst.txt  sequence_spec.rst.txt  supporting_design.rst.txt  technical_design.rst.txt  types.rst.txt
static/: bizstyle.js  documentation_options.js  phlexframework.css
subsystems/: algo_description.html  application.html  configuration.html  data_management.html  data_modeling.html  error_handler.html  io.html  logging.html  metadata_management.html  monitoring.html  plugin_management.html  random_numbers.html  registration.html  resource_management.html  signal_handler.html  task_management.html
survey/: phlex-v0.1.0-survey-generator.gs  stakeholder_survey.md
workflows/: GNUmakefile  Makefile  conf.py  index.rst  wirecell-charge-waveform-sim-doc.rst  wirecell-charge-waveform-sim-func.gv  wirecell-charge-waveform-sim.gv
(+92 files in other folders)
